# algorithm2python

./: .gitignore  bench.py  main.py  notes.org  prepare.py  pyproject.toml  run
src/: bench.py  colorful.py  prepare.py
src/algorithm2python/: main.py  prepare.py  python2algorithm.py
src/sample/: bench.py  colorful.py  hierholzer.py
tests/: test_algorithm2python.py
