[tool.poetry]
name = "algorithm2python"
version = "0.1.0"
description = "Convert python code to algorithm2e pseudocode for use in LaTeX documents"
authors = ["Gottschali <aligottschall@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
